--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <header class="header">
+
+        <div class="container">
+            <div class="bar">
+                <a class="logo" href="index.html">
+                    <h1 class="logo__name no-margin center-text">Blog<span class="logo__bold">DeCafé</span></h1>
+                </a>
+                <nav class="navegation">
+                    <a href="aboutUs.html" class="navegation__link">Nosotros</a>
+                    <a href="curses.html" class="navegation__link">Cursos</a>
+                    <a href="contact.html" class="navegation__link">Contacto</a>
+                </nav>
+            </div>
+        </div>
+
+        <div class="header__text">
+            <h2 class="no-margin">Blog de café con consejos y cursos</h2>
+            <p class="no-margin">Aprende de los expertos con los mejores recetas y consejos</p>
+        </div>
+    </header>
 </body>
 </html>
