--- a/index.html
+++ b/index.html
@@ -31,5 +31,44 @@
             <p class="no-margin">Aprende de los expertos con los mejores recetas y consejos</p>
         </div>
     </header>
+
+    <div class="container main-content">
+        <main class="blog">
+            <h3>Nuestro Blog</h3>
+            <article class="input">
+                <div class="input__image">
+                    <img src="img/blog1.jpg" alt="imagen blog">
+                </div>
+                <div class="input__content">
+                    <h4>Tipos de Grano de Café</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto perspiciatis similique vitae iste qui est perferendis sed dignissimos nihil! Voluptas, eligendi? Nulla in repellat hic consequuntur nostrum tempore et quas.</p>
+                    <a href="entrada.html" class="button primary__button">Leer Entrada</a>
+                </div>
+            </article>
+            <article class="input"> 
+                <div class="input__image">
+                    <img src="img/blog2.jpg" alt="imagen blog">
+                </div>
+                <div class="input__content">
+                    <h4>3 Deliciosas Recetas de Café</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto perspiciatis similique vitae iste qui est perferendis sed dignissimos nihil! Voluptas, eligendi? Nulla in repellat hic consequuntur nostrum tempore et quas.</p>
+                    <a href="entrada.html" class="button primary__button">Leer Entrada</a>
+                </div>
+            </article>
+            <article class="input">
+                <div class="input__image">
+                    <img src="img/blog3.jpg" alt="imagen blog">
+                </div>
+                <div class="input__content">
+                    <h4>Beneficios del café</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto perspiciatis similique vitae iste qui est perferendis sed dignissimos nihil! Voluptas, eligendi? Nulla in repellat hic consequuntur nostrum tempore et quas.</p>
+                    <a href="entrada.html" class="button primary__button">Leer Entrada</a>
+                </div>
+            </article>
+        </main>
+        <aside class="sidebar">
+            <h3>Nuestros Cursos y Talleres</h3>
+        </aside>
+    </div>
 </body>
 </html>
