the part of the finished sidebar

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="input__content">
                     <h4>Tipos de Grano de Café</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto perspiciatis similique vitae iste qui est perferendis sed dignissimos nihil! Voluptas, eligendi? Nulla in repellat hic consequuntur nostrum tempore et quas.</p>
-                    <a href="entrada.html" class="button primary__button">Leer Entrada</a>
+                    <a href="entry.html" class="button button--primary">Leer Entrada</a>
                 </div>
             </article>
             <article class="input"> 
@@ -52,7 +52,7 @@
                 <div class="input__content">
                     <h4>3 Deliciosas Recetas de Café</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto perspiciatis similique vitae iste qui est perferendis sed dignissimos nihil! Voluptas, eligendi? Nulla in repellat hic consequuntur nostrum tempore et quas.</p>
-                    <a href="entrada.html" class="button primary__button">Leer Entrada</a>
+                    <a href="entry.html" class="button button--primary">Leer Entrada</a>
                 </div>
             </article>
             <article class="input">
@@ -62,12 +62,30 @@
                 <div class="input__content">
                     <h4>Beneficios del café</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto perspiciatis similique vitae iste qui est perferendis sed dignissimos nihil! Voluptas, eligendi? Nulla in repellat hic consequuntur nostrum tempore et quas.</p>
-                    <a href="entrada.html" class="button primary__button">Leer Entrada</a>
+                    <a href="entry.html" class="button button--primary">Leer Entrada</a>
                 </div>
             </article>
         </main>
         <aside class="sidebar">
             <h3>Nuestros Cursos y Talleres</h3>
+            <ul class="curses no-padding">
+                <li class="widget-curse">
+                    <h4 class="no-margin">Técnicas de Extracción de Café</h4>
+                    <p class="widget-curse__label">Precio: 
+                        <span class="widget-curse__info">Gratis</span></p>
+                    <p class="widget-curse__label">Cupo: 
+                        <span class="widget-curse__info">20</span></p>
+                    <a href="entry.html" class="button button--secundary">Mas Información</a>
+                </li>
+                <li class="widget-curse">
+                    <h4 class="no-margin">4 Recetas de Café Para Principiante</h4>
+                    <p class="widget-curse__label">Precio: 
+                        <span class="widget-curse__info">Gratis</span></p>
+                    <p class="widget-curse__label">Cupo: 
+                        <span class="widget-curse__info">20</span></p>
+                    <a href="entry.html" class="button button--secundary">Mas Información</a>
+                </li>
+            </ul>
         </aside>
     </div>
 </body>
