the footer part is finished like the whole main page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 <body>
     <header class="header">
-
         <div class="container">
             <div class="bar">
                 <a class="logo" href="index.html">
@@ -25,7 +24,6 @@
                 </nav>
             </div>
         </div>
-
         <div class="header__text">
             <h2 class="no-margin">Blog de café con consejos y cursos</h2>
             <p class="no-margin">Aprende de los expertos con los mejores recetas y consejos</p>
@@ -88,5 +86,19 @@
             </ul>
         </aside>
     </div>
+    <footer class="footer">
+        <div class="container">
+            <div class="bar">
+                <a class="logo" href="index.html">
+                    <h1 class="logo__name no-margin center-text">Blog<span class="logo__bold">DeCafé</span></h1>
+                </a>
+                <nav class="navegation">
+                    <a href="aboutUs.html" class="navegation__link">Nosotros</a>
+                    <a href="curses.html" class="navegation__link">Cursos</a>
+                    <a href="contact.html" class="navegation__link">Contacto</a>
+                </nav>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
