fixed some issues with a few course words and links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </a>
                 <nav class="navegation">
                     <a href="aboutUs.html" class="navegation__link">Nosotros</a>
-                    <a href="curses.html" class="navegation__link">Cursos</a>
+                    <a href="course.html" class="navegation__link">Cursos</a>
                     <a href="contact.html" class="navegation__link">Contacto</a>
                 </nav>
             </div>
@@ -66,21 +66,21 @@
         </main>
         <aside class="sidebar">
             <h3>Nuestros Cursos y Talleres</h3>
-            <ul class="curses no-padding">
-                <li class="widget-curse">
+            <ul class="courses no-padding">
+                <li class="widget-course">
                     <h4 class="no-margin">Técnicas de Extracción de Café</h4>
-                    <p class="widget-curse__label">Precio: 
-                        <span class="widget-curse__info">Gratis</span></p>
-                    <p class="widget-curse__label">Cupo: 
-                        <span class="widget-curse__info">20</span></p>
+                    <p class="widget-course__label">Precio: 
+                        <span class="widget-course__info">Gratis</span></p>
+                    <p class="widget-course__label">Cupo: 
+                        <span class="widget-course__info">20</span></p>
                     <a href="entry.html" class="button button--secundary">Mas Información</a>
                 </li>
-                <li class="widget-curse">
+                <li class="widget-course">
                     <h4 class="no-margin">4 Recetas de Café Para Principiante</h4>
-                    <p class="widget-curse__label">Precio: 
-                        <span class="widget-curse__info">Gratis</span></p>
-                    <p class="widget-curse__label">Cupo: 
-                        <span class="widget-curse__info">20</span></p>
+                    <p class="widget-course__label">Precio: 
+                        <span class="widget-course__info">Gratis</span></p>
+                    <p class="widget-course__label">Cupo: 
+                        <span class="widget-course__info">20</span></p>
                     <a href="entry.html" class="button button--secundary">Mas Información</a>
                 </li>
             </ul>
@@ -94,7 +94,7 @@
                 </a>
                 <nav class="navegation">
                     <a href="aboutUs.html" class="navegation__link">Nosotros</a>
-                    <a href="curses.html" class="navegation__link">Cursos</a>
+                    <a href="course.html" class="navegation__link">Cursos</a>
                     <a href="contact.html" class="navegation__link">Contacto</a>
                 </nav>
             </div>
