--- a/aboutUs.html
+++ b/aboutUs.html
@@ -19,7 +19,7 @@
                 </a>
                 <nav class="navegation">
                     <a href="aboutUs.html" class="navegation__link">Nosotros</a>
-                    <a href="curses.html" class="navegation__link">Cursos</a>
+                    <a href="course.html" class="navegation__link">Cursos</a>
                     <a href="contact.html" class="navegation__link">Contacto</a>
                 </nav>
             </div>
@@ -52,7 +52,7 @@
                 </a>
                 <nav class="navegation">
                     <a href="aboutUs.html" class="navegation__link">Nosotros</a>
-                    <a href="curses.html" class="navegation__link">Cursos</a>
+                    <a href="course.html" class="navegation__link">Cursos</a>
                     <a href="contact.html" class="navegation__link">Contacto</a>
                 </nav>
             </div>
