--- a/courses.html
+++ b/courses.html
@@ -32,7 +32,7 @@
     <main class="container">
         <h3 class="text-center">Nuestros Próximos Cursos y Talleres</h3>
         <div class="course">
-            <div class="cuse-image">
+            <div class="course-image">
                 <img src="img/curso1.jpg" alt="Imagen del curso">
             </div>
             <div class="course__information">
@@ -47,7 +47,7 @@
             </div>
         </div> <!--End of the course-->
         <div class="course">
-            <div class="cuse-image">
+            <div class="course-image">
                 <img src="img/curso2.jpg" alt="Imagen del curso">
             </div>
             <div class="course__information">
@@ -62,7 +62,7 @@
             </div>
         </div> <!--End of the course-->
         <div class="course">
-            <div class="cuse-image">
+            <div class="course-image">
                 <img src="img/curso3.jpg" alt="Imagen del curso">
             </div>
             <div class="course__information">
